# callbackery

./: .gitignore  .travis.yml  .travis.yml.offline  CHANGES  MANIFEST  MANIFEST.SKIP  Makefile.PL  Makefile.aperl  README  README.md  TODO  callbackery.sublime-project
.github/workflows/: unit-tests.yaml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-protocol-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-04-PLAN.md  01-CONTEXT.md  01-RESEARCH-v2.md  01-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/superpowers/plans/: 2026-06-11-jsonrpc-in-plugin.md  2026-07-15-session-expiry-and-comms-failure-ux.md
docs/superpowers/specs/: 2026-06-11-jsonrpc-in-plugin-design.md  2026-07-15-session-expiry-and-comms-failure-ux-design.md
lib/: CallBackery.pm
lib/CallBackery/: Config.pm  Database.pm  DocPlugin.pm  Index.pod  Plugin.pm  PluginForm.pm  PluginFormGrid.pm  PluginTable.pm  RpcService.pm  Translate.pm  User.pm
lib/CallBackery/Command/: config.pm  shell.pm  showconfig.pm
lib/CallBackery/Controller/: RpcService.pm
lib/CallBackery/GuiPlugin/: Abstract.pm  AbstractAction.pm  AbstractCardlist.pm  AbstractForm.pm  AbstractHtml.pm  AbstractTable.pm  UserForm.pm  Users.pm
lib/CallBackery/Model/: ConfigJsonSchema.pm
lib/CallBackery/Plugin/: UserForm.pm  Users.pm
lib/CallBackery/qooxdoo/: Manifest.json
lib/CallBackery/qooxdoo/callbackery/: config.json
lib/CallBackery/qooxdoo/callbackery/source/class/callbackery/: Application.js
lib/CallBackery/qooxdoo/callbackery/source/class/callbackery/data/: Config.js  RemoteTableModel.js  Server.js
lib/CallBackery/qooxdoo/callbackery/source/class/callbackery/ui/: Busy.js  Card.js  Desktop.js  Footer.js  Header.js  HtmlBox.js  Login.js  MsgBox.js  Page.js  Plugins.js  Popup.js  Screen.js  TabView.js
lib/CallBackery/qooxdoo/callbackery/source/class/callbackery/ui/form/: Auto.js  FileSelectorMenuButton.js  UploadButton.js  UploadToolbarButton.js  VirtualSelectBox.js
lib/CallBackery/qooxdoo/callbackery/source/class/callbackery/ui/form/renderer/: NoteForm.js
lib/CallBackery/qooxdoo/callbackery/source/class/callbackery/ui/plugin/: Action.js  ActionForm.js  CardList.js  Form.js  Html.js  Table.js
lib/CallBackery/qooxdoo/callbackery/source/translation/: de.po
lib/CallBackery/qooxdoo/source/class/callbackery/: Application.js
lib/CallBackery/qooxdoo/source/class/callbackery/data/: MHistoryRelaxedEncoding.js  Server.js
lib/CallBackery/qooxdoo/source/class/callbackery/ui/: Busy.js  Footer.js  Login.js  Popup.js  Screen.js
lib/CallBackery/qooxdoo/source/class/callbackery/ui/form/renderer/: HBox.js
lib/CallBackery/qooxdoo/source/class/callbackery/ui/plugin/: Action.js  Form.js  Table.js
lib/CallBackery/qooxdoo/source/translation/: de.po
lib/CallBackery/qooxdoo/uploadwidget/source/class/uploadwidget/: UploadButton.js
lib/Mojolicious/Command/Author/generate/callbackery_app/: Makefile.am  README
lib/Mojolicious/Command/Author/generate/callbackery_app/frontend/: compile.json
lib/Mojolicious/Command/generate/: callbackery_app.pm
lib/Mojolicious/Command/generate/callbackery_app/: .gitignore  Makefile.am  PERL_MODULES  README  configure.ac
lib/Mojolicious/Command/generate/callbackery_app/etc/: app.cfg
lib/Mojolicious/Command/generate/callbackery_app/frontend/: Makefile.am
lib/Mojolicious/Command/generate/callbackery_app/frontend/source/class/app/: Application.js
lib/Mojolicious/Command/generate/callbackery_app/lib/: Makefile.am
lib/Mojolicious/Command/generate/callbackery_app/lib/App/GuiPlugin/: Song.pm  SongForm.pm
t/: basic.t  callbackery.cfg  invalidPlugin.t  jsonrpc.t  session_expiry.t
